src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  html {
    font-family: "Inter", Proxima Nova, system-ui, sans-serif;
    /* font-family: "Zeyada", Proxima Nova, system-ui, sans-serif; */
  }
}

.bg {
  -webkit-text-size-adjust: 100%;
  -webkit-tap-highlight-color: transparent;
  --swiper-theme-color: #007aff;
  --full-viewport: 664px;
  text-align: left;
  color: #000;
  font-weight: 400;
  -webkit-font-smoothing: antialiased;
  line-height: 1.75;
  font-size: 16px;
  box-sizing: inherit;
  position: absolute;
  top: 0;
  left: 50%;
  transform: translateX(-50%);
  width: 101%;
  z-index: -1;
  height: 100%;
  background-size: cover;
  background-position: 50% 50%;
  min-width: 2560px;
  background-color: #fafafc;
}

